--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,131 +8,165 @@
     android:background="#333333"
     tools:context=".RegisterActivity">
 
-    <EditText
-        android:id="@+id/confirm_password_edit_text"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_edit_text"
-        android:ems="10"
-        android:hint="ยืนยันรหัสผ่าน"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/register_button"
-        app:layout_constraintEnd_toEndOf="@+id/pid_edit_text"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/pid_edit_text"
-        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"/>
-
-    <TextView
-        android:id="@+id/title_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="Bike Parking"
-        android:textColor="@android:color/white"
-        android:textSize="48sp"
-        app:fontFamily="@font/harlosi"
-        app:layout_constraintBottom_toTopOf="@+id/first_name_edit_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"/>
-
-    <ImageView
-        android:id="@+id/logo_image_view"
-        android:layout_width="225dp"
-        android:layout_height="352dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_login"/>
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/first_name_edit_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/bg_edit_text"
-        android:ems="10"
-        android:hint="ชื่อ"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/last_name_edit_text"
-        app:layout_constraintEnd_toEndOf="@+id/pid_edit_text"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/pid_edit_text"
-        app:layout_constraintTop_toBottomOf="@+id/title_text_view"/>
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/last_name_edit_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_edit_text"
-        android:ems="10"
-        android:hint="นามสกุล"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/pid_edit_text"
-        app:layout_constraintEnd_toEndOf="@+id/pid_edit_text"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/pid_edit_text"
-        app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text"/>
+            <EditText
+                android:id="@+id/confirm_password_edit_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="ยืนยันรหัสผ่าน"
+                android:inputType="textPassword"
+                app:layout_constraintBottom_toTopOf="@+id/register_button"
+                app:layout_constraintEnd_toEndOf="@+id/pid_edit_text"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/pid_edit_text"
+                app:layout_constraintTop_toBottomOf="@+id/password_edit_text"/>
 
-    <EditText
-        android:id="@+id/pid_edit_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginRight="48dp"
-        android:layout_marginStart="48dp"
-        android:background="@drawable/bg_edit_text"
-        android:ems="10"
-        android:hint="เลขบัตรประชาชน"
-        android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/last_name_edit_text"/>
+            <TextView
+                android:id="@+id/title_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:text="Bike Parking"
+                android:textColor="@android:color/white"
+                android:textSize="48sp"
+                app:fontFamily="@font/harlosi"
+                app:layout_constraintBottom_toTopOf="@+id/first_name_edit_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"/>
 
-    <EditText
-        android:id="@+id/password_edit_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_edit_text"
-        android:ems="10"
-        android:hint="รหัสผ่าน"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/confirm_password_edit_text"
-        app:layout_constraintEnd_toEndOf="@+id/pid_edit_text"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/pid_edit_text"
-        app:layout_constraintTop_toBottomOf="@+id/pid_edit_text"/>
+            <ImageView
+                android:id="@+id/logo_image_view"
+                android:layout_width="225dp"
+                android:layout_height="352dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_login"/>
 
-    <Button
-        android:id="@+id/register_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/bg_button_login"
-        android:text="สมัครสมาชิก"
-        android:textColor="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/password_edit_text"
-        app:layout_constraintTop_toBottomOf="@+id/confirm_password_edit_text"/>
+            <EditText
+                android:id="@+id/first_name_edit_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="ชื่อ"
+                android:inputType="textPersonName"
+                app:layout_constraintBottom_toTopOf="@+id/last_name_edit_text"
+                app:layout_constraintEnd_toEndOf="@+id/pid_edit_text"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/pid_edit_text"
+                app:layout_constraintTop_toBottomOf="@+id/title_text_view"/>
+
+            <EditText
+                android:id="@+id/last_name_edit_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="นามสกุล"
+                android:inputType="textPersonName"
+                app:layout_constraintBottom_toTopOf="@+id/pid_edit_text"
+                app:layout_constraintEnd_toEndOf="@+id/pid_edit_text"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/pid_edit_text"
+                app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text"/>
+
+            <EditText
+                android:id="@+id/pid_edit_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="48dp"
+                android:layout_marginLeft="48dp"
+                android:layout_marginRight="48dp"
+                android:layout_marginStart="48dp"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="เลขบัตรประชาชน 13 หลัก"
+                android:inputType="number"
+                android:maxLength="13"
+                app:layout_constraintBottom_toTopOf="@+id/phone_edit_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/last_name_edit_text"/>
+
+            <EditText
+                android:id="@+id/phone_edit_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="48dp"
+                android:layout_marginLeft="48dp"
+                android:layout_marginRight="48dp"
+                android:layout_marginStart="48dp"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="เบอร์โทรศัพท์"
+                android:inputType="phone"
+                app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pid_edit_text"/>
+
+            <EditText
+                android:id="@+id/password_edit_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="รหัสผ่าน"
+                android:inputType="textPassword"
+                app:layout_constraintBottom_toTopOf="@+id/confirm_password_edit_text"
+                app:layout_constraintEnd_toEndOf="@+id/pid_edit_text"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/pid_edit_text"
+                app:layout_constraintTop_toBottomOf="@+id/pid_edit_text"/>
+
+            <Button
+                android:id="@+id/register_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/bg_button_login"
+                android:text="สมัครสมาชิก"
+                android:textColor="#ffffff"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/password_edit_text"
+                app:layout_constraintTop_toBottomOf="@+id/confirm_password_edit_text"/>
+
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/progress_view"
