--- a/app/src/main/res/layout/activity_user_maps.xml
+++ b/app/src/main/res/layout/activity_user_maps.xml
@@ -23,7 +23,12 @@
         android:id="@+id/book_layout"
         android:layout_width="0dp"
         android:layout_height="120dp"
-        android:background="#eeeeee"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/bg_booking"
         android:visibility="invisible"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
