ปรับสีพื้นหลังหน้า login, register ให้ต่างกัน ระหว่าง user กับ provider

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
+    <color name="bg_login_user">@color/colorPrimaryDark</color>
+    <color name="bg_login_provider">#333333</color>
+
     <color name="booking_status_0">#FFCCCC</color>
     <color name="booking_status_1">#FFF6B3</color>
     <color name="booking_status_2">#eeeeee</color>
