--- a/app/src/main/res/menu/activity_temp_drawer.xml
+++ b/app/src/main/res/menu/activity_temp_drawer.xml
@@ -4,6 +4,11 @@
       tools:showIn="navigation_view">
 
     <item
+        android:id="@+id/nav_slip"
+        android:icon="@drawable/ic_slip"
+        android:title="สลิปการชำระเงิน"/>
+
+    <item
         android:id="@+id/nav_log_out"
         android:icon="@drawable/ic_log_out"
         android:title="ออกจากระบบ"/>
